After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729703 - Leaks a GError in g_file_move
Leaks a GError in g_file_move
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-05-07 10:33 UTC by David King
Modified: 2014-07-28 12:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix the memory leak (950 bytes, patch)
2014-05-07 10:34 UTC, David King
committed Details | Review

Description David King 2014-05-07 10:33:23 UTC
While digging about in gfile.c, I came across a memory leak in g_file_move(), where if a GError is not propagated it is leaked. I did not test with Valgrind, so the coming patch is just based on inspecting the code.
Comment 1 David King 2014-05-07 10:34:26 UTC
Created attachment 276059 [details] [review]
fix the memory leak
Comment 2 Allison Karlitskaya (desrt) 2014-07-28 12:46:19 UTC
Review of attachment 276059 [details] [review]:

Looks good -- thanks.
Comment 3 David King 2014-07-28 12:49:14 UTC
Comment on attachment 276059 [details] [review]
fix the memory leak

Pushed to master. Thanks for the review!