gfile: Fix memory leak in g_file_move()

https://bugzilla.gnome.org/show_bug.cgi?id=729703